--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -217,7 +217,9 @@ body{
 }
 
 
-
+.round{
+	border-radius: 50%;
+}
 .round-thumbnail{
 	background-position: center;
 	background-repeat: no-repeat;
@@ -225,9 +227,10 @@ body{
 
 	border-radius: 50%;
 }
-.round-thumbnail.size-2{width: 2em; height: 2em;}
-.round-thumbnail.size-4{width: 4em; height: 4em;}
-.round-thumbnail.size-6{width: 6em; height: 6em;}
+.size-2{min-width: 2em; max-width: 2em; width: 2em; min-height: 2em; max-height: 2em; height: 2em;}
+.size-3{min-width: 3em; max-width: 3em; width: 3em; min-height: 3em; max-height: 3em; height: 3em;}
+.size-4{min-width: 4em; max-width: 4em; width: 4em; min-height: 4em; max-height: 4em; height: 4em;}
+.size-6{min-width: 6em; max-width: 6em; width: 6em; min-height: 6em; max-height: 6em; height: 6em;}
 
 
 .middle{
