--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -20,10 +20,32 @@ section > .list{
 }
 .vehicle-info-app-bar .round-thumbnail{
    margin-right: 1em;
+   flex-shrink: 0;
 }
 .vehicle-info-app-bar .secondary{
    color: var(--primary-color-contrast-faded);
    font-size: 80%;
+}
+.vehicle-info-app-bar .tertiary{
+   display: inline-block;
+   align-self: flex-end;
+   flex-shrink: 0;
+
+   margin: 0.2em;
+   margin-left: 0.5em;
+
+   text-align: right;
+   color: var(--primary-color-contrast-faded);
+}
+@media (orientation: portrait){
+   .vehicle-info-app-bar .tertiary{
+      font-size: 70%;
+   }
+}
+@media (orientation: landscape){
+   .vehicle-info-app-bar .tertiary{
+      font-size: 80%;
+   }
 }
 
 
