Logging better displayed
- The logs entries are now beeing displayed in a new layout
- Now the log stream sends javascript objects to the renderer with all
information about the log, instead of strings

--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -244,11 +244,11 @@ body{
 
 .flex-horizontal-layout{
 	display: flex;
-	flex-flow: row;
+	flex-direction: row;
 }
 .flex-vertical-layout{
 	display: flex;
-	flex-flow: column;
+	flex-direction: column;
 }
 .flex-horizontal-layout > *, .flex-vertical-layout > *{
 	position: relative;
