--- a/rest/ui/css/log.css
+++ b/rest/ui/css/log.css
@@ -2,9 +2,15 @@
  * Removing the default padding
  */
 #log-list .row{
-   padding-top: 0.8em;
-   padding-bottom: 0.8em;
-   font-size: 0.9em;
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+
+   height: 3.5em;
+   padding-top: 0.4em;
+   padding-bottom: 0.4em;
+
+   font-size: 1.3em;
 
    animation: logRowFadeIn 0.5s ease;
    animation-fill-mode: forwards;
@@ -26,13 +32,12 @@
  */
 #log-list .row::before{
    content: '';
-   display: inline-block;
+   display: block;
 
    height: 0.5em;
    width: 0.5em;
    margin-right: 1em;
 
-   vertical-align: baseline;
    border-radius: 50%;
    background: var(--accent-color);
 
@@ -52,40 +57,45 @@
 
 
 /**
- * Reseting the font color and size
+ * Request status code
  */
-#log-list .row *{
-   color: rgba(33, 33, 33, 0.7);
-   font-size: 1em;
+#log-list .row .status{
+   font-size: 100%;
+   width: 2.2em;
+   overflow: hidden;
 }
 
-
-/**
- * Bold elements
- */
-#log-list .row .bold{
-   font-weight: bold;
+#log-list .row .vertical-line{
+   margin: 0 0.5em;
 }
+
+#log-list .row .primary{
+   font-size: 75%;
+}
+#log-list .row .secondary{
+   font-size: 65%;
+}
+
 
 
 /**
  * Highlighting the status code
  */
-#log-list .row *[data-status]{
+#log-list .status[data-status]{
    font-weight: bold;
 }
-#log-list .row *[data-status="100"]{
+#log-list .status[data-status="100"]{
    color: #2196F3;
 }
-#log-list .row *[data-status="200"]{
+#log-list .status[data-status="200"]{
    color: #689F38;
 }
-#log-list .row *[data-status="300"]{
+#log-list .status[data-status="300"]{
    color: #009688;
 }
-#log-list .row *[data-status="400"]{
+#log-list .status[data-status="400"]{
    color: #C0CA33;
 }
-#log-list .row *[data-status="500"]{
+#log-list .status[data-status="500"]{
    color: #E53935;
 }
