Dialog system done
- Dialog and flat buttons layout got refined a bit
- Dialog system is now up and running
Now we can:
- Subscribe new dialogs to this system
- Open a new dialog, passing a parameter to it
- Dismiss the current dialog, if any
- Set actions to both open and dismiss events on a dialog

--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -366,27 +366,6 @@ button.raised:active, a.raised:active, .dragging.raised {
 
 
 
-/**
- * Flat button
- */
-.flat-button{
-	position: relative;
-	padding: 1em;
-	color: var(--bg-color-contrast);
-}
-
-.flat-button.highlighted{
-	color: var(--accent-color);
-   font-weight: bold;
-}
-
-.flat-button:disabled{
-	color: var(--bg-color-contrast-faded);
-	opacity: 0.5;
-}
-
-
-
 /* ========== * ========== * ========== * ==========
  * Form
  * ========== * ========== * ========== * ==========
@@ -576,40 +555,47 @@ li .secondary{
 
 
 /* ========== * ========== * ========== * ==========
- * Dialog
+ * Dialogs
  * ========== * ========== * ========== * ==========
  */
-/*
- *	Dialog container:
+/**
+ * Dialog overlay container
  */
 .dialogs{
-	display: block;
 	position: fixed;
-	top:0;
+	top: 0;
 	left: 0;
-	height: 100%;
 	width: 100%;
-	padding: 6em 1.5em;
+	height: 100%;
+	padding: 5vh 0;
 
+	background: rgba(0, 0, 0, 0.6);
+	z-index: 10;
 }
-
-/*
- *	Dialog window:
+/**
+ * Dialog
  */
 .dialog{
-	position: relative;
-	margin: 0 auto;
-	max-height: 100%;
-	width: 35em;
-	max-width: 100%;
-
+	width: 50vw;
+	margin: auto;
+	height: auto;
 	background: var(--bg-color);
+}
+@media (orientation: landscape){
+	.dialog{
+		min-width: 20em;
+	}
+}
+@media (orientation: portrait){
+	.dialog{
+		min-width: 90vw;
+	}
 }
 
 /*
  *	Dialog buttons:
  */
-.dialog > .button-container{
+.dialog > .flat-button-container{
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
@@ -618,14 +604,38 @@ li .secondary{
 	width: 100%;
 	flex-shrink: 0;
 }
-.dialog > .button-container > *{
+.dialog > .flat-button-container > *{
 	position: relative;
 	padding: 1em 2.5em;
 	height: 100%;
 	flex-grow: 0;
 }
-.dialog > .button-container > .material-icons{
+.dialog > .flat-button-container > .material-icons{
 	font-size: 1.5em;
+}
+
+
+
+/* ========== * ========== * ========== * ==========
+ * Flat buttons
+ * ========== * ========== * ========== * ==========
+ */
+/**
+ * Flat button
+ */
+.flat-button{
+	position: relative;
+	padding: 1em;
+	color: var(--bg-color-contrast);
+	text-transform: uppercase;
+}
+.flat-button.highlighted{
+	color: var(--accent-color);
+   font-weight: bold;
+}
+.flat-button:disabled{
+	color: var(--bg-color-contrast-faded);
+	opacity: 0.5;
 }
 
 
