Vehicle update page
- Thumbnail file inputs has its own class inside common.css now
- Material icons css class isn't duplicated anymore
- Added autocomplete off policy on most forms
- Some changes were done on vehicle create page in order to match some
new aspects of the vehicle update page

--- a/web/static/css/font.css
+++ b/web/static/css/font.css
@@ -11,3 +11,12 @@
    font-weight: 400;
    src:  url(../../static/res/font/Roboto-Bold.ttf) format('truetype');
 }
+
+@font-face {
+   font-family: 'Material Icons';
+   font-style: normal;
+   font-weight: 400;
+   src:  url(../res/icon/MaterialIcons-Regular.woff2) format('woff2'),
+         url(../res/icon/MaterialIcons-Regular.eot) format('eot'),
+         url(../res/icon/MaterialIcons-Regular.ttf) format('truetype');
+}
