--- a/web/static/css/vehicles.css
+++ b/web/static/css/vehicles.css
@@ -13,6 +13,7 @@
 #vehicles-list .info{
    align-items: center;
    flex-shrink: 0;
+	cursor: pointer;
 }
 #vehicles-list .info .round-thumbnail{
    margin-right: 1em
@@ -42,6 +43,13 @@
    margin: auto;
    text-align: center;
    cursor: default;
+	cursor: pointer;
+}
+
+
+#vehicles-list .schedules .round{
+	background: var(--primary-color);
+	color: var(--primary-color-contrast-faded);
 }
 
 
@@ -82,6 +90,10 @@
    #vehicles-list .info{
       padding-right: 1em;
    }
+	#vehicles-list .info > div:nth-child(2){
+		min-width: 9em;
+		width: 15vw;
+	}
    #vehicles-list > li > .vertical-line{
       height: 7em;
    }
