--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -550,18 +550,30 @@ li .secondary{
 }
 
 
-/*
-.black-screen{
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.8);
+
+/* ========== * ========== * ========== * ==========
+ * Flat buttons
+ * ========== * ========== * ========== * ==========
+ */
+/**
+ * Flat button
+ */
+.flat-button{
+	position: relative;
+	padding: 1em;
+	color: var(--bg-color-contrast);
 }
-.black-screen.main{
-	z-index: 8;
-	padding: 2em;
+.flat-button:not(.material-icons){
+	text-transform: uppercase;
 }
-*/
+.flat-button.highlighted{
+	color: var(--accent-color);
+   font-weight: bold;
+}
+.flat-button:disabled{
+	color: var(--bg-color-contrast-faded);
+	opacity: 0.5;
+}
 
 
 
@@ -573,6 +585,7 @@ li .secondary{
  * Dialog overlay container
  */
 .dialogs{
+	opacity: 0;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -587,11 +600,13 @@ li .secondary{
  * Dialog
  */
 .dialog{
+	opacity: 0;
 	max-height: 100%;
 	width: 50vw;
 	margin: auto;
 	height: auto;
 	background: var(--bg-color);
+	transform: translateY(5em);
 }
 @media handheld, (max-width: 25em), (max-height: 25em){
 	.dialog{
@@ -614,7 +629,7 @@ li .secondary{
 	}
 }
 
-/*
+/**
  *	Dialog buttons:
  */
 .dialog > .flat-button-container{
@@ -627,13 +642,21 @@ li .secondary{
 	flex-shrink: 0;
 }
 .dialog > .flat-button-container > *{
-	position: relative;
 	padding: 1em 2.5em;
 	height: 100%;
 	flex-grow: 0;
 }
 .dialog > .flat-button-container > .material-icons{
-	font-size: 1.5em;
+	font-size: 1.3em;
+}
+
+/**
+ * Default dialogs' text:
+ */
+.default-dialog-text{
+	padding: 0 1.8em 2em 1.8em;
+	font-size: 1.1em;
+	white-space: pre-wrap;
 }
 
 @media handheld, (max-width: 25em), (max-height: 25em){
@@ -643,27 +666,68 @@ li .secondary{
 	}
 }
 
-
-/* ========== * ========== * ========== * ==========
- * Flat buttons
- * ========== * ========== * ========== * ==========
- */
 /**
- * Flat button
+ * Dialog animation:
  */
-.flat-button{
-	position: relative;
-	padding: 1em;
-	color: var(--bg-color-contrast);
-	text-transform: uppercase;
+.dialog:not(.active){
+	animation: dialogFadeOff;
+	animation-timing-function: ease;
 }
-.flat-button.highlighted{
-	color: var(--accent-color);
-   font-weight: bold;
+.dialog.active{
+	animation: dialogFadeIn;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
 }
-.flat-button:disabled{
-	color: var(--bg-color-contrast-faded);
-	opacity: 0.5;
+
+.dialogs:not(.active){
+	animation: dialogContainerFadeOff;
+	animation-timing-function: ease;
+}
+.dialogs.active{
+	animation: dialogContainerFadeIn;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+}
+
+/**
+ * Dialog keyframes:
+ */
+@keyframes dialogFadeIn{
+	0% {
+		opacity: 0;
+		transform: translateY(5em);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+@keyframes dialogFadeOff{
+	0% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+	100% {
+		opacity: 0;
+		transform: translateY(5em);
+	}
+}
+
+@keyframes dialogContainerFadeIn{
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes dialogContainerFadeOff{
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
 
 
