Added dismiss button on snackbars
- The user can dismiss the current snackbar now

--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -95,7 +95,7 @@ section > .list{
 /**
  * Snackbar button color correction
  */
-.snackbar > button{
+.snackbar > button:nth-of-type(1){
    color: #9575CD;
 }
 
