--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -761,12 +761,20 @@ li .secondary{
 	padding: 0.5em 2em 0.5em 0;
 	color: #FAFAFA;
 }
-.snackbar > button{
+.snackbar > button:nth-of-type(1){
 	flex-grow: 0;
 	flex-shrink: 0;
-	padding: 1.6em 2em;
+	padding: 1.6em 1em;
 	text-transform: uppercase;
 	color: var(--accent-color);
+}
+.snackbar > button:nth-of-type(2){
+	flex-grow: 0;
+	flex-shrink: 0;
+	padding: 0.5em;
+	margin: 0 0.6em;
+	font-size: 1.2em;
+	color: #FAFAFA;
 }
 
 /**
