Photo update bug and Active status fields
- Fixed a bug were the user had to select a vehicle photo everytime when
updating a vehicle, even if they didn't want to change it
- Active status fields added on web interface

--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -134,6 +134,40 @@ section > .list{
 /**
  * MDL color correction
  */
+
+
+/**
+ * MDL checkbox
+ */
+/**
+ * Ckeckbox fill
+ */
+.mdl-checkbox.is-checked .mdl-checkbox__tick-outline{
+   background-color: var(--accent-color);
+}
+/**
+ * Checkbox outline (unchecked)
+ */
+.mdl-checkbox__box-outline{
+   border-color: var(--bg-color-contrast-icon);
+}
+/**
+ * Checkbox outline (checked)
+ */
+.mdl-checkbox.is-checked .mdl-checkbox__box-outline{
+   border-color: var(--accent-color);
+}
+/**
+ * Checkbox ripple
+ */
+.mdl-checkbox__ripple-container .mdl-ripple{
+   background: var(--accent-color);
+}
+
+
+/**
+ * MDL input
+ */
 /**
  * MDL input floating label color (focus)
  */
