Drawer, animations and some other visual changes
- Animations util module done
- Mobile versions of chrome now gets its url bar painted with deep
purple 600
- Auth and fallback page got some style
- Now we can open/close the drawer
- A purple load screen hides the spa loading time now
- All FABs got an id
- All FABs got an animation that plays out when the user navigates into
the page
- The vehicles' photo on the index page got some inflation too

--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -12,6 +12,17 @@ section > .list{
 }
 
 
+
+#load-overlay{
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background: var(--primary-color);
+   z-index: 16;
+}
+
+
+
 /**
  * Vehicle info on app-bar
  */
@@ -207,4 +218,11 @@ section > .list{
  */
 .tinted .mdl-textfield__label{
    color: var(--primary-color-contrast-faded);
+}
+
+/**
+ * MDL spinner
+ */
+.mdl-spinner__circle{
+   border-color: var(--accent-color);
 }
