--- a/web/static/css/schedules.css
+++ b/web/static/css/schedules.css
@@ -6,6 +6,10 @@
    flex-direction: row;
    align-items: flex-start;
 }
+#schedules-list *:hover{
+   cursor: pointer;
+}
+
 
 /**
  * Schedule user and reason
