Users' listing visual improvement
- Some visual improvements on users' listing

--- a/web/static/css/all.css
+++ b/web/static/css/all.css
@@ -62,6 +62,15 @@ section > .list{
 
 
 /**
+ * Hovering on list items:
+ */
+.list > li:hover, .list > li *:hover{
+   cursor: pointer;
+}
+
+
+
+/**
  * User app-bar
  */
 .user-info-app-bar > div{
